--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit
-requests
-pandas
-beautifulsoup4
-yfinance
-transformers==2.5.0
-prophet
-plotly
-numpy==1.26.0
-tensorflow
-tf-keras
+streamlit==1.38.0
+requests==2.32.3
+pandas==2.2.3
+beautifulsoup4==4.12.3
+yfinance==0.2.43
+transformers==4.45.1
+prophet==1.1.5
+plotly==5.24.1
+numpy==1.26.4
